2004-08-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/README: Revised.
	* sample/hello-applet.server, clock-applet.server:
	Change category to "Ruby/PanelApplet Samples".

2004-06-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/hello-applet.[server|rb], clock-applet.server, README: Added.
	* sample/clock-applet.rb: Fixed.
	* rbpanel-applet.c: Fixed and added some methods.

2004-06-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* lib/panelapplet2.rb: Added instead of lib/panel-applet.rb
	* lib/panel-applet.rb: Removed.

2004-05-04  Jamis Buck <jgb3@email.byu.edu>

	* rbpanel-applet.c: updated module with minimal 
	functionality so that panel applets may now be written for Gnome2.
	* lib/clock-applet.rb: Fixed.

2003-08-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbpanel-applet.c: Rewritten.
	* extconf.rb: Exit with 1 when the package is not found.
	
2003-05-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb position changes.

2003-02-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: Use ../mkmf-gnome2.rb

2002-11-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Add file.
	* ChangeLog: Convert date format.

2002-05-26  Akinori MUSHA <knu@iDaemons.org>

	* extconf.rb: Support --with-gnome-config (Ruby-GNOME patch [532458])

2002-02-05  Neil Conway <neilconway@rogers.com>

	* rbpanel-applet.c: Major changes, additions and improvements.

2001-11-24  Neil Conway <neilconway@rogers.com>

	* MANIFEST: File removed.

2001-05-22  Hiroshi IGARASHI  <iga@ruby-lang.org>

	* import panel-applet binding.